# local-voice-chat-ai

./: .gitignore  README.md  pyproject.toml
characters/: sample_character.txt
random_speech/: sample.txt
scenarios/: sample_scenario.txt
src/: assistant_window.py  chat.py  config_dialog.py  config_loader.py  gui.py  main.py  recorder.py  speaker.py  transcriber.py  ui_parts.py
tests/: test_assistant_window.py  test_assistant_window_state.py  test_characters.py  test_chat.py  test_config_dialog.py  test_gui.py  test_main.py  test_recorder.py  test_reset_history.py  test_scenarios.py  test_speaker.py  test_transcriber.py
